@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

class Stock {
  code
  name
  market
}

class MarketQuote {
  price
  openPrice
  high
  low
  volume
  amount
  quoteTime
}

class MarketPage {
  pageNumber
  pageSize
  total
  quotes
}

class FinancialReport {
  pe
  pb
  revenue
  netProfit
  totalAssets
  operatingCashFlow
}

class OrderBook {
  bidPrice
  askPrice
  bidVolume
  askVolume
}

class MarketDataProvider {
  marketPage()
  quote()
  intraday()
  candles()
}

Stock "1" --> "*" MarketQuote
MarketPage "1" o-- "*" MarketQuote
MarketQuote --> FinancialReport
MarketQuote --> OrderBook
MarketDataProvider --> MarketPage
MarketDataProvider --> MarketQuote
@enduml
